# stm32_Balance_Car_L

APP/: app_control.c
BSP/: bsp.c  bsp_pi_comm.c  bsp_pi_comm.h
USER/: AllHeader.h  main.c  myenum.h  stm32_Balance_Car.uvguix.lifng  stm32_Balance_Car.uvoptx  stm32_Balance_Car.uvprojx
doc/: K210与ROS接口文档.md  K210模块开发与接口文档.md  ROS2容器化运行说明.md  ROS2整体设计与包结构方案.md  ROS2骨架搭建与测试记录.md  STM32与树莓派串口通讯协议设计草案V1.md  机器人系统开发计划.md  架构对齐-先决条件基线.md  树莓派5基础环境搭建步骤.md  树莓派5基础环境阶段执行记录.md  树莓派已部署自研文件清单.md  现有系统与新增配件接线方案.md  第三阶段串口联调验证步骤.md  系统状态机与软关机验证步骤.md  进阶式挑战性综合项目II课题任务书.docx  阶段4_TminiPlus实现方案.md  阶段4_TminiPlus接入执行记录.md  雷达避障与跟踪算法接口文档.md
ros2_ws/: README.md
ros2_ws/src/balance_car_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/balance_car_bringup/balance_car_bringup/: __init__.py  ros_ready_node.py
ros2_ws/src/balance_car_bringup/config/: devices.yaml  modes.yaml
ros2_ws/src/balance_car_bringup/launch/: bridge_only.launch.py  system.launch.py
ros2_ws/src/balance_car_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/balance_car_navigation/balance_car_navigation/: __init__.py  backend_client.py  controller_adapter.py  lidar_avoid_node.py  lidar_follow_node.py  lidar_track_node.py  lidar_utils.py  vision_follow_node.py  vision_line_node.py
ros2_ws/src/balance_car_navigation/launch/: navigation.launch.py
tools/: balance_car_ros2.service  canmv_k210_uart_demo.py  lidar_mode_policy.json  pi_backend_client.py  pi_car_coordinator.py  pi_car_coordinator.service  pi_motion_smoke_test.py  pi_serial_bridge.deploy.py  pi_serial_bridge.py  start_ros2_bringup.sh  (+3 more)
(+59 files in other folders)
