<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balance_car_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the balance car ROS 2 stack.</description>
  <maintainer email="lifng0@example.com">lifng0</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>balance_car_bridge</exec_depend>
  <exec_depend>balance_car_lidar</exec_depend>
  <exec_depend>balance_car_behavior</exec_depend>
  <exec_depend>balance_car_perception</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
